Causeview Package Complete/ant script/retrieveUnpackaged/objects/Volunteer_Hours__c.object
<CustomObject>
    <description>Used to track and manage the hours submitted by a Volunteer for a specific Volunteer Role</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments related to the logged hours.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Day__c</fullName>
        <description>Date volunteer hours were completed (MM/DD/YYYY)</description>
        <inlineHelpText>Date volunteer hours were delivered</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Kind_Value__c</fullName>
        <description>The In-Kind value of the hours at a specified rate</description>
        <formula>Service_Hours_Completed__c   *19.71</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines the In-Kind value of the Hours</inlineHelpText>
        <label>In-Kind Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>Total miles traveled to complete hours.</description>
        <label>Mileage (Miles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Hours_Completed__c</fullName>
        <description>Hours completed at volunteer shift.</description>
        <label>Service Hours</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the hours (Logged, Completed, No-Show).</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Logged</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Role__c</fullName>
        <formula>Volunteer_Shift__r.Volunteer_Role__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Volunteer Role the hours were logged against</inlineHelpText>
        <label>Volunteer Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Shift__c</fullName>
        <inlineHelpText>The Volunteer Position Shift the hours are being logged against</inlineHelpText>
        <label>Volunteer Shift</label>
        <referenceTo>Volunteer_Shift__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <description>The ID of the individual who completed the volunteer hours.</description>
        <inlineHelpText>The Volunteer the hours are being submitted by</inlineHelpText>
        <label>Volunteer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Volunteer Hour</label>
    <listViews>
        <fullName>Individual_Hours</fullName>
        <columns>Volunteer__c</columns>
        <columns>Volunteer_Role__c</columns>
        <columns>End_Day__c</columns>
        <columns>Status__c</columns>
        <columns>Volunteer_Shift__c</columns>
        <columns>NAME</columns>
        <columns>Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Logged,Confirmed,No-Show</value>
        </filters>
        <label>Volunteer Hours</label>
    </listViews>
    <listViews>
        <fullName>Refugee_Hours</fullName>
        <columns>Volunteer__c</columns>
        <columns>Volunteer_Shift__c</columns>
        <columns>Comments__c</columns>
        <columns>NAME</columns>
        <columns>Mileage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Role__c</field>
            <operation>contains</operation>
            <value>Refugee</value>
        </filters>
        <label>Refugee Hours</label>
    </listViews>
    <listViews>
        <fullName>VITA_West_Yavapai</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Volunteer__c</columns>
        <columns>NAME</columns>
        <columns>Volunteer_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Volunteer_Role__c</field>
            <operation>contains</operation>
            <value>East</value>
        </filters>
        <filters>
            <field>Volunteer_Role__c</field>
            <operation>contains</operation>
            <value>VITA</value>
        </filters>
        <label>VITA East Yavapai</label>
    </listViews>
    <nameField>
        <displayFormat>VH-{000000}</displayFormat>
        <label>Volunteer Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>